# python-dry-decorators

./: LICENSE  README.md  pyproject.toml
scripts/: setup.sh
src/decorator_logging/: __main__.py  decorator.py
src/decorator_logging/some_modularized_code/: example.py
src/python_dry_decorators/: __main__.py  decorator.py  example.py
